--- a/main.html
+++ b/main.html
@@ -7,6 +7,17 @@
 </head>
 
 <body>
+	<ol>
+		<li data-ns-test="shoppingList">Android Phone</li>
+		<li data-ns-test="shoppingList">TV</li>
+		<li data-ns-test="shoppingList">Car</li>
+	</ol>
+
+	<ul>
+		<li data-ns-test="shoppingList">Bali</li>
+		<li data-ns-test="shppingList">USA</li>
+		<li data-ns-test="shoppingList">Tokyo</li>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
