--- a/main.html
+++ b/main.html
@@ -14,9 +14,9 @@
 	</ol>
 
 	<ul>
-		<li data-ns-test="shoppingList">Bali</li>
-		<li data-ns-test="shppingList">USA</li>
-		<li data-ns-test="shoppingList">Tokyo</li>
+		<li data-ns-test="holidayList">Bali</li>
+		<li data-ns-test="holidayList">USA</li>
+		<li data-ns-test="holidayList">Tokyo</li>
 	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
